plugins/paintops/libpaintop/kis_pressure_mirror_option.h
@@ -69,8 +69,6 @@ public:
 private:
     bool m_enableVerticalMirror;
     bool m_enableHorizontalMirror;
-    bool m_canvasAxisXMirrored;
-    bool m_canvasAxisYMirrored;
 };
 
 #endif
