plugins/paintops/tangentnormal/kis_tangent_tilt_option.h
@@ -50,9 +50,6 @@ public:
     int directionType() const;
     double elevationSensitivity() const;
     double mixValue() const;
-    qreal m_canvasAngle;
-    bool m_canvasAxisXMirrored;
-    bool m_canvasAxisYMirrored;
     /*This assigns the right axis to the component, based on index and maximum value*/
     void swizzleAssign(qreal const horizontal, qreal const vertical, qreal const depth, qreal *component, int index, qreal maxvalue);
 
